maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:46: error: ';' expected but string literal found.
    	println "indice"
                ^